--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "tsx ./api/index.ts",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -12,6 +13,10 @@
   "dependencies": {
     "@radix-ui/themes": "^3.0.5",
     "autoprefixer": "^10.4.19",
+    "axios": "1.7.2",
+    "cors": "2.8.5",
+    "deepl-node": "^1.13.0",
+    "express": "4.19.2",
     "openai": "4.52.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
@@ -19,6 +24,8 @@
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -27,7 +34,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.15.7",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
 }
